# HarnessAgent

./: .env.example  .gitignore  CHANGELOG.md  GAP_PLAN.md  GEPA_PLAN.md  PAPER_PLAN.md  README.md  harness_agent_ieee.html  pyproject.toml
benchmarks/: bench_ablation.py  bench_agencybench_ablation.py  bench_agent.py  bench_atbench.py  bench_bird.py  bench_bird_real.py  bench_cache.py  bench_cache_store.py  bench_circuit_breaker.py  bench_graphrag.py  bench_hermes.py  bench_hermes_gaia.py  bench_hermes_real.py  bench_span_overhead.py  bench_span_overhead_redis.py  bench_taubench.py  run_all.py
benchmarks/results/: REPORT.md  ablation_nexussql.json  agencybench_v2_ablation.json  atbench_safety_trajectories.json  base_base.json  bird_real_results.json  bird_results.json  circuit_breaker_reliability.json  code_code.json  graphrag_token_efficiency.json  gsm8k_n100.json  gsm8k_nexus_results.json  hermes_gaia_improvement.json  hermes_real_results.json  hermes_self_improvement.json  semantic_cache_hit_rate.json  span_recording_overhead.json  span_recording_overhead_redis.json  sql_sql.json  taubench_safety.json
docs/: code_graph.md  index.html
examples/: code_graph_demo.py
paper/: generate_figures.py  harness_agent_ieee.tex
scripts/: gepa_bird_optimize.py  gepa_mlflow_demo.py  gepa_optimize.py
src/harness/: __init__.py
src/harness/adapters/: autogen.py  base.py  crewai.py  langgraph.py
src/harness/agents/: aria_code.py  aria_sql.py  base.py  code_agent.py  nexus_sql.py
src/harness/api/: deps.py  main.py
src/harness/api/routes/: evals.py  feedback.py  health.py  improvement.py  runs.py  steps.py  traces.py
src/harness/core/: config.py  cost_tracker.py  errors.py  prompt_overrides.py  protocols.py  rate_limiter.py
src/harness/eval/: agent_report.py  agent_scorer.py  benchmark_loaders.py  datasets.py  failure_taxonomy.py  judge_cache.py  runner.py  sandbox.py  scorers.py  task_hardness.py
src/harness/feedback/: channel.py
src/harness/filesystem/: __init__.py  checkpoint.py  e2b_sandbox.py  modal_sandbox.py  sandbox.py
src/harness/improvement/: error_collector.py  evaluator.py  hermes.py  online_monitor.py  patch_generator.py
src/harness/improvement/gepa/: __init__.py  adapter.py  eval_adapter.py  eval_optimizer.py  generator.py  reflection.py
src/harness/improvement/rlvr/: advantage.py  buffer.py  loop.py  reward.py  verifiers.py
src/harness/ingestion/: __init__.py  chunker.py  code_extractor.py  code_loader.py  extractor.py
src/harness/llm/: __init__.py  anthropic.py  bedrock.py  cache.py  complexity.py  factory.py  local.py  openai_provider.py  providers_catalog.py  router.py  structured.py
src/harness/mcp/: __init__.py  __main__.py  bridge.py  config.py  server.py
src/harness/memory/: __init__.py  code_entity_extractor.py  code_graph.py  code_graph_rag.py  context_engine.py  context_engineering.py  embedder.py  graph.py  graph_rag.py  manager.py  vector_factory.py
src/harness/memory/backends/: chroma.py  qdrant.py  weaviate.py
src/harness/messaging/: bus.py  patterns.py
src/harness/observability/: dlq.py  eval_log.py  event_bus.py  failures.py  trace_recorder.py  tracer.py
src/harness/orchestrator/: __init__.py  blackboard.py  hitl.py  planner.py  runner.py  scheduler.py
src/harness/prompts/: store.py
src/harness/safety/: pipeline_factory.py  policies.py
src/harness/security/: __init__.py  scanner.py  secrets.py
src/harness/tools/: __init__.py  code_graph_tools.py  code_tools.py  mcp_client.py  registry.py  skill_store.py  sql_tools.py
src/harness/verification/: __init__.py  verifier.py
src/harness/workers/: agent_worker.py  hermes_worker.py  rlvr_worker.py
tests/integration/: test_code_graph_integration.py  test_sandbox_providers_live.py
tests/unit/: test_agent_base.py  test_api_steps_stream.py  test_api_tenant_isolation.py  test_aria_sql.py  test_blackboard.py  test_code_entity_extractor.py  test_code_execution_scoring.py  test_code_extractor.py  test_code_graph.py  test_code_loader.py  test_complexity.py  test_context_engine.py  test_context_engineering.py  test_cost_tracker.py  test_e2b_sandbox.py  test_embedder.py  test_enforcement_wiring.py  test_eval_components.py  test_feedback_channel.py  test_filesystem.py  test_gepa_bird_cli.py  test_gepa_cli.py  test_gepa_eval_optimizer.py  test_gepa_generator.py  test_graph_cypher_safety.py  test_harness_attribution.py  test_hermes.py  test_hermes_worker_wiring.py  test_ingestion.py  test_llm_cache.py  test_llm_router.py  test_mcp_server.py  test_message_translation.py  test_messaging.py  test_modal_sandbox.py  test_nexus_sql.py  test_openai_provider.py  test_orchestrator.py  test_planner_parse.py  test_prompt_versioning.py  (+11 more)
ui/: docs_v2.html
