[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agent-haas"
version = "0.4.0"
description = "Harness as a Service — production-grade multi-agent harness with LLM routing, paged context, hierarchical tracing, safety, and self-improvement"
authors = ["thepradip <pradiptivhale@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thepradip/HarnessAgent"
repository = "https://github.com/thepradip/HarnessAgent"
documentation = "https://thepradip.github.io/HarnessAgent/"
keywords = ["llm", "agent", "multi-agent", "haas", "harness", "autogen", "crewai", "langgraph", "openai", "anthropic", "tracing", "observability"]
packages = [{include = "harness", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

# ---------------------------------------------------------------------------
# Core — truly minimal: agent loop, tool registry, safety, config, Redis state
# pip install agent-haas   → ~50 MB
# ---------------------------------------------------------------------------
[tool.poetry.dependencies]
python            = "^3.11"
pydantic          = ">=2.9.0"
pydantic-settings = ">=2.6.0"
httpx             = ">=0.28.0"
redis             = ">=5.2.0"
networkx          = ">=3.3"
jsonschema        = ">=4.23.0"
structlog         = ">=24.4.0"
aiofiles          = ">=24.1.0"

# ---------------------------------------------------------------------------
# Optional extras — pip install agent-haas[extra1,extra2]
# ---------------------------------------------------------------------------

# LLM providers — pick the one(s) you use
# pip install agent-haas[anthropic]
anthropic = {version = ">=0.40.0", optional = true}

# pip install agent-haas[openai]
openai   = {version = ">=1.50.0", optional = true}
tiktoken = {version = ">=0.8.0",  optional = true}

# REST API server (FastAPI + auth + SSE)
# pip install agent-haas[api]
fastapi          = {version = ">=0.115.0", optional = true}
uvicorn          = {extras = ["standard"], version = ">=0.30.0", optional = true}
python-multipart = {version = ">=0.0.12", optional = true}
sse-starlette    = {version = ">=2.1.0",  optional = true}
python-jose      = {extras = ["cryptography"], version = ">=3.3.0", optional = true}
passlib          = {extras = ["bcrypt"],       version = ">=1.7.4", optional = true}

# Background workers (Hermes scheduler, RQ task queue)
# pip install agent-haas[workers]
apscheduler = {version = ">=3.10.0", optional = true}
rq          = {version = ">=2.0.0",  optional = true}

# SQL persistence (SQLAgent, run store)
# pip install agent-haas[sql]
sqlalchemy  = {extras = ["asyncio"], version = ">=2.0.0", optional = true}
aiosqlite   = {version = ">=0.20.0", optional = true}
asyncpg     = {version = ">=0.30.0", optional = true}
sqlglot     = {version = ">=20.0.0", optional = true}

# Vector memory — fastembed uses ONNX (~100 MB), NO PyTorch dependency
# pip install agent-haas[vector]
fastembed       = {version = ">=0.3.0",  optional = true}
chromadb        = {version = ">=0.5.0",  optional = true}
qdrant-client   = {version = ">=1.11.0", optional = true}
weaviate-client = {version = ">=4.9.0",  optional = true}

# Full embeddings with sentence-transformers + PyTorch (~1.5 GB) — explicit opt-in
# pip install agent-haas[embed-full]
sentence-transformers = {version = ">=3.3.0", optional = true}

# Graph memory backend
# pip install agent-haas[graph]
neo4j = {version = ">=5.27.0", optional = true}

# Observability
# pip install agent-haas[observe]
mlflow                      = {version = ">=2.18.0", optional = true}
opentelemetry-api           = {version = ">=1.27.0", optional = true}
opentelemetry-sdk           = {version = ">=1.27.0", optional = true}
opentelemetry-exporter-otlp = {version = ">=1.27.0", optional = true}
prometheus-client           = {version = ">=0.21.0", optional = true}

# Document ingestion
# pip install agent-haas[ingestion]
pymupdf     = {version = ">=1.24.0", optional = true}
trafilatura = {version = ">=1.12.0", optional = true}
python-docx = {version = ">=1.1.0",  optional = true}

# MCP integration — client (connect to MCP servers) AND server
# (expose the harness over MCP via `harness-mcp` / `python -m harness.mcp`).
# pip install agent-haas[mcp]
mcp = {version = ">=1.2.0", optional = true}
anyio = {version = ">=4.5.0", optional = true}

# Structured LLM output
# pip install agent-haas[structured]
instructor = {version = ">=1.6.0", optional = true}

# Prompt optimization (GEPA reflective prompt evolution for the Hermes loop)
# pip install agent-haas[improvement]
gepa = {version = ">=0.1.1", optional = true, python = ">=3.11,<3.15"}

# AWS Bedrock — Claude (needs the anthropic extra too) + general models via Converse
# pip install agent-haas[bedrock]
boto3 = {version = ">=1.35.0", optional = true}

# E2B cloud sandbox for code execution (SANDBOX_PROVIDER=e2b)
# pip install agent-haas[e2b]
e2b-code-interpreter = {version = ">=1.0.0", optional = true}

# Modal serverless sandbox for code execution (SANDBOX_PROVIDER=modal)
# pip install agent-haas[modal]
modal = {version = ">=0.64.0", optional = true}

[tool.poetry.extras]
# Single-purpose extras
anthropic  = ["anthropic"]
openai     = ["openai", "tiktoken"]
api        = ["fastapi", "uvicorn", "python-multipart", "sse-starlette", "python-jose", "passlib"]
workers    = ["apscheduler", "rq"]
sql        = ["sqlalchemy", "aiosqlite", "asyncpg", "sqlglot"]
vector     = ["fastembed", "chromadb", "qdrant-client", "weaviate-client"]
embed-full = ["sentence-transformers"]
graph      = ["neo4j"]
observe    = ["mlflow", "opentelemetry-api", "opentelemetry-sdk", "opentelemetry-exporter-otlp", "prometheus-client"]
ingestion  = ["pymupdf", "trafilatura", "python-docx"]
mcp        = ["mcp", "anyio"]
structured = ["instructor"]
improvement = ["gepa"]
# Bedrock Claude also needs the `anthropic` extra: pip install agent-haas[bedrock,anthropic]
bedrock    = ["boto3"]
e2b        = ["e2b-code-interpreter"]
modal      = ["modal"]

# Convenience bundles
# Good default for most users (~300 MB, no torch)
recommended = [
    "anthropic", "openai", "tiktoken",
    "fastapi", "uvicorn", "python-multipart", "sse-starlette", "python-jose", "passlib",
    "apscheduler", "rq",
    "sqlalchemy", "aiosqlite",
    "fastembed", "chromadb",
    "mlflow", "prometheus-client",
]

# Everything except torch (~500 MB)
all = [
    "anthropic", "openai", "tiktoken",
    "fastapi", "uvicorn", "python-multipart", "sse-starlette", "python-jose", "passlib",
    "apscheduler", "rq",
    "sqlalchemy", "aiosqlite", "asyncpg", "sqlglot",
    "fastembed", "chromadb", "qdrant-client", "weaviate-client",
    "neo4j",
    "mlflow", "opentelemetry-api", "opentelemetry-sdk", "opentelemetry-exporter-otlp", "prometheus-client",
    "pymupdf", "trafilatura", "python-docx",
    "mcp", "anyio",
    "instructor",
]

# ---------------------------------------------------------------------------
# Console scripts
# ---------------------------------------------------------------------------
[tool.poetry.scripts]
# Expose the harness as an MCP server (stdio by default). Needs the [mcp] extra.
harness-mcp = "harness.mcp.__main__:main"

# ---------------------------------------------------------------------------
# Dev dependencies
# ---------------------------------------------------------------------------
[tool.poetry.group.dev.dependencies]
pytest          = ">=8.3.0"
pytest-asyncio  = ">=0.24.0"
pytest-cov      = ">=6.0.0"
pytest-mock     = ">=3.14.0"
fakeredis       = ">=2.26.0"
respx           = ">=0.21.0"
factory-boy     = ">=3.3.0"
freezegun       = ">=1.5.0"
ruff            = ">=0.8.0"
mypy            = ">=1.13.0"

# ---------------------------------------------------------------------------
# Tool config
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes  = ["Test*"]
python_functions = ["test_*"]
addopts = ["--tb=short", "-q"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH", "RUF"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["harness"]

[tool.mypy]
python_version      = "3.11"
strict              = true
ignore_missing_imports = true
plugins             = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/harness"]
omit   = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under   = 80
show_missing = true
